# eecs498

./: CMakeLists.txt  helloworld.edl
enclave/: CMakeLists.txt  enc.c
host/: host.c
